--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype HTML>
+<html lang="en">
+
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,6 +8,7 @@
 <title>Thinkful React Starter</title>
 
 <link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
 <div id="app"></div>
 
